--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycleVersion"
 
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+
 }
