--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation "com.google.android.material:material:1.2.1"
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
 
     testImplementation 'junit:junit:4.13.1'
