--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,11 +17,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures {
+        viewBinding true
+    }
     compileOptions {
         targetCompatibility 1.8
         sourceCompatibility 1.8
     }
-    buildToolsVersion '29.0.2'
+    buildToolsVersion '30.0.3'
 }
 
 dependencies {
@@ -32,7 +35,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation "com.google.android.material:material:1.3.0"
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-
+    implementation "com.google.android.gms:play-services-location:18.0.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -58,7 +61,7 @@ dependencies {
 
 
     //ROOM
-    def room_version = "2.2.6"
+    def room_version = "2.3.0"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     // *****room optional - Test helpers
