--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.openclassrooms.realestatemanager">
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the "MyLocation" functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,13 +21,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".controler.ModifyEstateActivity"></activity>
-        <activity android:name=".controler.CreateEstateActivity" />
+        android:theme="@style/Theme.MaterialComponents.DayNight">
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBM42q3bmSdlAnPGzGesADPLjRVD6KPLbk" />
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".controler.MapsEstateActivity"
+            android:label="@string/title_activity_maps_estate"
+            android:parentActivityName=".controler.MainActivity"/>
+
+        <activity android:name=".controler.ModifyEstateActivity"
+            android:parentActivityName=".controler.MainActivity"/>
+
+        <activity android:name=".controler.CreateEstateActivity"
+            android:parentActivityName=".controler.MainActivity"/>
 
         <provider
             android:name=".provider.EstateContentProvider"
@@ -35,9 +49,8 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths" />
         </provider>
-
 
         <activity android:name=".controler.MainActivity">
             <intent-filter>
