--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.openclassrooms.realestatemanager">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -21,22 +20,30 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MaterialComponents.DayNight">
+        android:theme="@style/AppTheme2">
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <activity android:name=".controler.LoanSimulatorActivity"
+            android:label="@string/loan_simulator_label"
+            android:parentActivityName=".controler.MainActivity"/>
+
+        <activity
+            android:name=".controler.DetailsActivity"
+            android:label="@string/details_label"
+            android:parentActivityName=".controler.MainActivity" />
         <activity
             android:name=".controler.MapsEstateActivity"
-            android:label="@string/title_activity_maps_estate"
-            android:parentActivityName=".controler.MainActivity"/>
-
-        <activity android:name=".controler.ModifyEstateActivity"
-            android:parentActivityName=".controler.MainActivity"/>
-
-        <activity android:name=".controler.CreateEstateActivity"
-            android:parentActivityName=".controler.MainActivity"/>
+            android:label="@string/map_label"
+            android:parentActivityName=".controler.MainActivity" />
+        <activity
+            android:name=".controler.ModifyEstateActivity"
+            android:parentActivityName=".controler.MainActivity" />
+        <activity
+            android:name=".controler.CreateEstateActivity"
+            android:parentActivityName=".controler.MainActivity" />
 
         <provider
             android:name=".provider.EstateContentProvider"
