--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -36,17 +37,19 @@ dependencies {
     implementation "com.google.android.material:material:1.3.0"
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation "com.google.android.gms:play-services-location:18.0.0"
+    implementation "androidx.multidex:multidex:2.0.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-//    // TESTING
-//    testImplementation 'androidx.test:core:1.3.0'
-//    testImplementation 'androidx.test.ext:truth:1.3.0'
-//    testImplementation 'com.google.truth:truth:1.0'
-//    androidTestImplementation 'androidx.test:runner:1.3.0'
-//    androidTestImplementation 'androidx.test:rules:1.3.0'
+    // TESTING
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'androidx.test.ext:truth:1.3.0'
+    testImplementation 'com.google.truth:truth:1.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0-rc01'
 
     // Testing
     def espressoVersion = '3.3.0'
